; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_ucode.c_radeon_ucode_validate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_ucode.c_radeon_ucode_validate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.firmware = type { i64, i64 }
%struct.common_firmware_header = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @radeon_ucode_validate(%struct.firmware* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.firmware*, align 8
  %4 = alloca %struct.common_firmware_header*, align 8
  store %struct.firmware* %0, %struct.firmware** %3, align 8
  %5 = load %struct.firmware*, %struct.firmware** %3, align 8
  %6 = getelementptr inbounds %struct.firmware, %struct.firmware* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to %struct.common_firmware_header*
  store %struct.common_firmware_header* %8, %struct.common_firmware_header** %4, align 8
  %9 = load %struct.firmware*, %struct.firmware** %3, align 8
  %10 = getelementptr inbounds %struct.firmware, %struct.firmware* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.common_firmware_header*, %struct.common_firmware_header** %4, align 8
  %13 = getelementptr inbounds %struct.common_firmware_header, %struct.common_firmware_header* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @le32_to_cpu(i32 %14)
  %16 = icmp eq i64 %11, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

18:                                               ; preds = %1
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %18, %17
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i64 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
